v1.0.0/modules/schema/pages/class/SubControlArea.adoc
= `SubControlArea`
:toclevels: 4


+++An area defined for the purpose of tracking interchange with surrounding areas via tie points; may or may not serve as a control area.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:SubControlArea`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
*** *`SubControlArea`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
SubControlArea {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnergyTransaction {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



GeneralClearingResults {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



BidSelfSched {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnergyTransaction {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Flowgate {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



AdjacentCASet {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



InadvertentAccount {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TieLine {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



LossClearingResults {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



CnodeDistributionFactor {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



AggregateNode {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ExPostLossResults {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DynamicSchedule {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



RegisteredResource {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Flowgate {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TieLine {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ControlAreaDesignation {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DynamicSchedule {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



RTO {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Pnode {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



AreaReserveSpec {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



HostControlArea {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Control {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Measurement {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PSRType {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ReportingGroup {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OperatingShare {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AssetInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



VerificationAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ClearanceDocument {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



GenericAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PSREvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Location {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OperationalTag {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




SubControlArea -> EnergyTransaction: Import_EnergyTransactions


SubControlArea -> GeneralClearingResults: GeneralClearingResults


SubControlArea -> BidSelfSched: BidSelfSched


SubControlArea -> EnergyTransaction: Export_EnergyTransactions


SubControlArea -> Flowgate: From_Flowgate


SubControlArea -> AdjacentCASet: AdjacentCASet


SubControlArea -> InadvertentAccount: InadvertentAccount


SubControlArea -> TieLine: SideB_TieLines


SubControlArea -> LossClearingResults: LossClearingResults


SubControlArea -> CnodeDistributionFactor: CnodeDistributionFactor


SubControlArea -> AggregateNode: AggregateNode


SubControlArea -> ExPostLossResults: ExPostLossResults


SubControlArea -> DynamicSchedule: Receive_DynamicSchedules


SubControlArea -> RegisteredResource: RegisteredResource


SubControlArea -> Flowgate: To_Flowgate


SubControlArea -> TieLine: SideA_TieLines


SubControlArea -> ControlAreaDesignation: ControlAreaDesignation


SubControlArea -> DynamicSchedule: Send_DynamicSchedules


SubControlArea -> RTO: RTO


SubControlArea -> Pnode: Pnode


SubControlArea -> AreaReserveSpec: AreaReserveSpecification


SubControlArea -> HostControlArea: HostControlArea


SubControlArea -> Control: Controls


SubControlArea -> Measurement: Measurements


SubControlArea -> PSRType: PSRType


SubControlArea -> ConfigurationEvent: ConfigurationEvent


SubControlArea -> ReportingGroup: ReportingGroup


SubControlArea -> OperatingShare: OperatingShare


SubControlArea -> AssetInfo: AssetDatasheet


SubControlArea -> VerificationAction: VerificationAction


SubControlArea -> ClearanceDocument: Clearances


SubControlArea -> GenericAction: GenericAction


SubControlArea -> PSREvent: PSREvents


SubControlArea -> Asset: Assets


SubControlArea -> Location: Location


SubControlArea -> OperationalTag: OperationalTags


SubControlArea -> DiagramObject: DiagramObjects


SubControlArea -> InstanceSet: InstanceSet


SubControlArea -> Name: Names


SubControlArea -> ChangeSetMember: PropertiesCIMDataObject


SubControlArea -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<AreaReserveSpecification,`AreaReserveSpecification`>>
| 1
| xref::class/AreaReserveSpec.adoc[`AreaReserveSpec`]
| n/a

| <<HostControlArea,`HostControlArea`>>
| 1
| xref::class/HostControlArea.adoc[`HostControlArea`]
| +++The interchange area  may operate as a control area+++

| <<RTO,`RTO`>>
| 1
| xref::class/RTO.adoc[`RTO`]
| n/a

| <<LossClearingResults,`LossClearingResults`>>
| 1..*
| xref::class/LossClearingResults.adoc[`LossClearingResults`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<AdjacentCASet,`AdjacentCASet`>>
| 0..1
| xref::class/AdjacentCASet.adoc[`AdjacentCASet`]
| n/a

| <<areaShortName,`areaShortName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Market area short name, which is the regulation zone. It references AGC regulation zone name.+++

| <<constantCoefficient,`constantCoefficient`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Loss estimate constant coefficient+++

| <<embeddedControlArea,`embeddedControlArea`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++Used in conjunction with the InternalCA flag. If the InternalCA flag is YES, this flag does not apply. If the InternaCA flag is NO, this flag provides an indication of AdjacentCA (NO) or Embedded CA (YES).+++

| <<internalCA,`internalCA`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++A Yes/No indication that this control area is contained internal to the system.+++

| <<linearCoefficient,`linearCoefficient`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Loss estimate linear coefficient+++

| <<localCA,`localCA`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++Indication that this control area is the local control area.+++

| <<maxSelfSchedMW,`maxSelfSchedMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum amount of self schedule MWs allowed for an embedded control area.+++

| <<minSelfSchedMW,`minSelfSchedMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Minimum amount of self schedule MW allowed for an embedded control area.+++

| <<quadraticCoefficient,`quadraticCoefficient`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Loss estimate quadratic coefficient+++

| <<AggregateNode,`AggregateNode`>>
| 0..*
| xref::class/AggregateNode.adoc[`AggregateNode`]
| n/a

| <<BidSelfSched,`BidSelfSched`>>
| 0..*
| xref::class/BidSelfSched.adoc[`BidSelfSched`]
| n/a

| <<CnodeDistributionFactor,`CnodeDistributionFactor`>>
| 0..*
| xref::class/CnodeDistributionFactor.adoc[`CnodeDistributionFactor`]
| n/a

| <<ControlAreaDesignation,`ControlAreaDesignation`>>
| 0..*
| xref::class/ControlAreaDesignation.adoc[`ControlAreaDesignation`]
| n/a

| <<ExPostLossResults,`ExPostLossResults`>>
| 0..*
| xref::class/ExPostLossResults.adoc[`ExPostLossResults`]
| n/a

| <<Export_EnergyTransactions,`Export_EnergyTransactions`>>
| 0..*
| xref::class/EnergyTransaction.adoc[`EnergyTransaction`]
| +++Energy is transferred between interchange areas+++

| <<From_Flowgate,`From_Flowgate`>>
| 0..*
| xref::class/Flowgate.adoc[`Flowgate`]
| n/a

| <<GeneralClearingResults,`GeneralClearingResults`>>
| 0..*
| xref::class/GeneralClearingResults.adoc[`GeneralClearingResults`]
| n/a

| <<Import_EnergyTransactions,`Import_EnergyTransactions`>>
| 0..*
| xref::class/EnergyTransaction.adoc[`EnergyTransaction`]
| +++Energy is transferred between interchange areas+++

| <<InadvertentAccount,`InadvertentAccount`>>
| 0..*
| xref::class/InadvertentAccount.adoc[`InadvertentAccount`]
| +++A control area can have one or more net inadvertent interchange accounts+++

| <<Pnode,`Pnode`>>
| 0..*
| xref::class/Pnode.adoc[`Pnode`]
| n/a

| <<Receive_DynamicSchedules,`Receive_DynamicSchedules`>>
| 0..*
| xref::class/DynamicSchedule.adoc[`DynamicSchedule`]
| +++A control area can receive dynamic schedules from other control areas+++

| <<RegisteredResource,`RegisteredResource`>>
| 0..*
| xref::class/RegisteredResource.adoc[`RegisteredResource`]
| n/a

| <<Send_DynamicSchedules,`Send_DynamicSchedules`>>
| 0..*
| xref::class/DynamicSchedule.adoc[`DynamicSchedule`]
| +++A control area can send dynamic schedules to other control areas+++

| <<SideA_TieLines,`SideA_TieLines`>>
| 0..*
| xref::class/TieLine.adoc[`TieLine`]
| +++The SubControlArea is on the A side of a collection of metered points which define the SubControlArea's boundary for a ControlAreaOperator or CustomerConsumer.+++

| <<SideB_TieLines,`SideB_TieLines`>>
| 0..*
| xref::class/TieLine.adoc[`TieLine`]
| +++The SubControlArea is on the B side of a collection of metered points which define the SubControlArea's boundary for a ControlAreaOperator or CustomerConsumer.+++

| <<To_Flowgate,`To_Flowgate`>>
| 0..*
| xref::class/Flowgate.adoc[`Flowgate`]
| n/a

| <<AssetDatasheet,`AssetDatasheet`>>
| 0..1
| xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Datasheet information for this power system resource.+++

| <<Location,`Location`>>
| 0..1
| xref::class/Location.adoc[`Location`]
| +++Location of this power system resource.+++

| <<PSRType,`PSRType`>>
| 0..1
| xref::class/PSRType.adoc[`PSRType`]
| +++Custom classification for this power system resource.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++

| <<Clearances,`Clearances`>>
| 0..*
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]
| +++All clearances applicable to this power system resource.+++

| <<ConfigurationEvent,`ConfigurationEvent`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this Power System resource.+++

| <<Controls,`Controls`>>
| 0..*
| xref::class/Control.adoc[`Control`]
| +++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<GenericAction,`GenericAction`>>
| 0..*
| xref::class/GenericAction.adoc[`GenericAction`]
| +++The generic action that is performed on the power system resource+++

| <<Measurements,`Measurements`>>
| 0..*
| xref::class/Measurement.adoc[`Measurement`]
| +++The measurements associated with this power system resource.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<OperatingShare,`OperatingShare`>>
| 0..*
| xref::class/OperatingShare.adoc[`OperatingShare`]
| +++The operating shares of this power system resource.+++

| <<OperationalTags,`OperationalTags`>>
| 0..*
| xref::class/OperationalTag.adoc[`OperationalTag`]
| +++All operational tags placed on this power system resource.+++

| <<PSREvents,`PSREvents`>>
| 0..*
| xref::class/PSREvent.adoc[`PSREvent`]
| +++All events associated with this power system resource.+++

| <<ReportingGroup,`ReportingGroup`>>
| 0..*
| xref::class/ReportingGroup.adoc[`ReportingGroup`]
| +++Reporting groups to which this power system resource belongs.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++

| <<VerificationAction,`VerificationAction`>>
| 0..*
| xref::class/VerificationAction.adoc[`VerificationAction`]
| +++The verification action that is performed on the power system resource+++
|===

'''


//[discrete]
[#AdjacentCASet]
=== `AdjacentCASet`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.AdjacentCASet`
| Cardinality
| 0..1
| Type
| xref::class/AdjacentCASet.adoc[`AdjacentCASet`]


|===

//[discrete]
[#AggregateNode]
=== `AggregateNode`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.AggregateNode`
| Cardinality
| 0..*
| Type
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AreaReserveSpecification]
=== `AreaReserveSpecification`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.AreaReserveSpecification`
| Cardinality
| 1
| Type
| xref::class/AreaReserveSpec.adoc[`AreaReserveSpec`]


|===

//[discrete]
[#areaShortName]
=== `areaShortName`
+++Market area short name, which is the regulation zone. It references AGC regulation zone name.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.areaShortName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#AssetDatasheet]
=== `AssetDatasheet`
+++Datasheet information for this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.AssetDatasheet`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#BidSelfSched]
=== `BidSelfSched`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.BidSelfSched`
| Cardinality
| 0..*
| Type
| xref::class/BidSelfSched.adoc[`BidSelfSched`]


|===

//[discrete]
[#Clearances]
=== `Clearances`
+++All clearances applicable to this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Clearances`
| Cardinality
| 0..*
| Type
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#CnodeDistributionFactor]
=== `CnodeDistributionFactor`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.CnodeDistributionFactor`
| Cardinality
| 0..*
| Type
| xref::class/CnodeDistributionFactor.adoc[`CnodeDistributionFactor`]


|===

//[discrete]
[#ConfigurationEvent]
=== `ConfigurationEvent`
+++All configuration events created for this Power System resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ConfigurationEvent`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#constantCoefficient]
=== `constantCoefficient`
+++Loss estimate constant coefficient+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.constantCoefficient`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#ControlAreaDesignation]
=== `ControlAreaDesignation`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.ControlAreaDesignation`
| Cardinality
| 0..*
| Type
| xref::class/ControlAreaDesignation.adoc[`ControlAreaDesignation`]


|===

//[discrete]
[#Controls]
=== `Controls`
+++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Controls`
| Cardinality
| 0..*
| Type
| xref::class/Control.adoc[`Control`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#embeddedControlArea]
=== `embeddedControlArea`
+++Used in conjunction with the InternalCA flag. If the InternalCA flag is YES, this flag does not apply. If the InternaCA flag is NO, this flag provides an indication of AdjacentCA (NO) or Embedded CA (YES).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.embeddedControlArea`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#Export_EnergyTransactions]
=== `Export_EnergyTransactions`
+++Energy is transferred between interchange areas+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.Export_EnergyTransactions`
| Cardinality
| 0..*
| Type
| xref::class/EnergyTransaction.adoc[`EnergyTransaction`]


|===

//[discrete]
[#ExPostLossResults]
=== `ExPostLossResults`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.ExPostLossResults`
| Cardinality
| 0..*
| Type
| xref::class/ExPostLossResults.adoc[`ExPostLossResults`]


|===

//[discrete]
[#From_Flowgate]
=== `From_Flowgate`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.From_Flowgate`
| Cardinality
| 0..*
| Type
| xref::class/Flowgate.adoc[`Flowgate`]


|===

//[discrete]
[#GeneralClearingResults]
=== `GeneralClearingResults`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.GeneralClearingResults`
| Cardinality
| 0..*
| Type
| xref::class/GeneralClearingResults.adoc[`GeneralClearingResults`]


|===

//[discrete]
[#GenericAction]
=== `GenericAction`
+++The generic action that is performed on the power system resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.GenericAction`
| Cardinality
| 0..*
| Type
| xref::class/GenericAction.adoc[`GenericAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#HostControlArea]
=== `HostControlArea`
+++The interchange area  may operate as a control area+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.HostControlArea`
| Cardinality
| 1
| Type
| xref::class/HostControlArea.adoc[`HostControlArea`]


|===

//[discrete]
[#Import_EnergyTransactions]
=== `Import_EnergyTransactions`
+++Energy is transferred between interchange areas+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.Import_EnergyTransactions`
| Cardinality
| 0..*
| Type
| xref::class/EnergyTransaction.adoc[`EnergyTransaction`]


|===

//[discrete]
[#InadvertentAccount]
=== `InadvertentAccount`
+++A control area can have one or more net inadvertent interchange accounts+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.InadvertentAccount`
| Cardinality
| 0..*
| Type
| xref::class/InadvertentAccount.adoc[`InadvertentAccount`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#internalCA]
=== `internalCA`
+++A Yes/No indication that this control area is contained internal to the system.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.internalCA`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#linearCoefficient]
=== `linearCoefficient`
+++Loss estimate linear coefficient+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.linearCoefficient`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#localCA]
=== `localCA`
+++Indication that this control area is the local control area.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.localCA`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#Location]
=== `Location`
+++Location of this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#LossClearingResults]
=== `LossClearingResults`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.LossClearingResults`
| Cardinality
| 1..*
| Type
| xref::class/LossClearingResults.adoc[`LossClearingResults`]


|===

//[discrete]
[#maxSelfSchedMW]
=== `maxSelfSchedMW`
+++Maximum amount of self schedule MWs allowed for an embedded control area.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.maxSelfSchedMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#Measurements]
=== `Measurements`
+++The measurements associated with this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#minSelfSchedMW]
=== `minSelfSchedMW`
+++Minimum amount of self schedule MW allowed for an embedded control area.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.minSelfSchedMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#OperatingShare]
=== `OperatingShare`
+++The operating shares of this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperatingShare`
| Cardinality
| 0..*
| Type
| xref::class/OperatingShare.adoc[`OperatingShare`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#OperationalTags]
=== `OperationalTags`
+++All operational tags placed on this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperationalTags`
| Cardinality
| 0..*
| Type
| xref::class/OperationalTag.adoc[`OperationalTag`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Pnode]
=== `Pnode`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.Pnode`
| Cardinality
| 0..*
| Type
| xref::class/Pnode.adoc[`Pnode`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PSREvents]
=== `PSREvents`
+++All events associated with this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSREvents`
| Cardinality
| 0..*
| Type
| xref::class/PSREvent.adoc[`PSREvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#PSRType]
=== `PSRType`
+++Custom classification for this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSRType`
| Cardinality
| 0..1
| Type
| xref::class/PSRType.adoc[`PSRType`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#quadraticCoefficient]
=== `quadraticCoefficient`
+++Loss estimate quadratic coefficient+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.quadraticCoefficient`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#Receive_DynamicSchedules]
=== `Receive_DynamicSchedules`
+++A control area can receive dynamic schedules from other control areas+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.Receive_DynamicSchedules`
| Cardinality
| 0..*
| Type
| xref::class/DynamicSchedule.adoc[`DynamicSchedule`]


|===

//[discrete]
[#RegisteredResource]
=== `RegisteredResource`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.RegisteredResource`
| Cardinality
| 0..*
| Type
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

//[discrete]
[#ReportingGroup]
=== `ReportingGroup`
+++Reporting groups to which this power system resource belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ReportingGroup`
| Cardinality
| 0..*
| Type
| xref::class/ReportingGroup.adoc[`ReportingGroup`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#RTO]
=== `RTO`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.RTO`
| Cardinality
| 1
| Type
| xref::class/RTO.adoc[`RTO`]


|===

//[discrete]
[#Send_DynamicSchedules]
=== `Send_DynamicSchedules`
+++A control area can send dynamic schedules to other control areas+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.Send_DynamicSchedules`
| Cardinality
| 0..*
| Type
| xref::class/DynamicSchedule.adoc[`DynamicSchedule`]


|===

//[discrete]
[#SideA_TieLines]
=== `SideA_TieLines`
+++The SubControlArea is on the A side of a collection of metered points which define the SubControlArea's boundary for a ControlAreaOperator or CustomerConsumer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.SideA_TieLines`
| Cardinality
| 0..*
| Type
| xref::class/TieLine.adoc[`TieLine`]


|===

//[discrete]
[#SideB_TieLines]
=== `SideB_TieLines`
+++The SubControlArea is on the B side of a collection of metered points which define the SubControlArea's boundary for a ControlAreaOperator or CustomerConsumer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.SideB_TieLines`
| Cardinality
| 0..*
| Type
| xref::class/TieLine.adoc[`TieLine`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#To_Flowgate]
=== `To_Flowgate`


[cols="h,4",width=65%]
|===
| URI
| `cim:SubControlArea.To_Flowgate`
| Cardinality
| 0..*
| Type
| xref::class/Flowgate.adoc[`Flowgate`]


|===

//[discrete]
[#VerificationAction]
=== `VerificationAction`
+++The verification action that is performed on the power system resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.VerificationAction`
| Cardinality
| 0..*
| Type
| xref::class/VerificationAction.adoc[`VerificationAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===


